# pursuit

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml  requirements.txt  settings.py
backend/accounts/: admin.py  models.py
backend/api/: apps.py  models.py  serializer.py  settings.py  signals.py  urls.py  views.py
backend/api/migrations/: 0004_initial.py  0005_remove_job_committment_remove_job_nextstep_job_stage_and_more.py  0006_alter_job_salary.py  0007_job_commitment_job_contact_job_deadline_and_more.py  0008_remove_job_seasons_job_season_alter_job_deadline.py  0009_alter_job_during_alter_job_level_alter_job_mode_and_more.py  0010_alter_season_status.py  0011_alter_job_commitment_alter_job_company_and_more.py  0012_alter_job_commitment_alter_job_company_and_more.py  0013_remove_job_commitment_remove_job_deadline_and_more.py  0014_alter_job_status.py  0015_profile_avatar_url.py  0016_remove_profile_profile_picture.py  0017_remove_season_start_date_alter_season_number_jobs.py  0018_remove_job_contact_remove_job_education.py  0019_remove_job_number_remove_season_number_jobs_and_more.py
backend/api/models/: job_model.py  profile_model.py  season_model.py
backend/api/util/: inference_client.py  openai_client.py  scraper.py  secrets.example.py
backend/api/views/: job_views.py  profile_views.py  season_views.py  session_views.py  user_views.py
backend/app/: settings.py  urls.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/pages/: _app.tsx  _document.tsx  dashboard.tsx  index.tsx  profile.tsx
(+34 files in other folders)
